Closed Bug 1004620 Opened 11 years ago Closed 11 years ago

"using namespace base" in ImageBridgeChild.cpp does not play nicely with unified builds

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: botond, Assigned: botond)

References

Details

Attachments

(1 file)

Example error: 3:34.38 In file included from ../../dist/system_wrappers/X11/Xlib.h:3:0, 3:34.38 from /usr/include/gtk-2.0/gdk/gdkx.h:32, 3:34.38 from /home/botond/dev/mozilla/central/widget/gtk/compat/gdk/gdkx.h:10, 3:34.38 from ../../dist/system_wrappers/gdk/gdkx.h:3, 3:34.38 from ../../dist/include/mozilla/X11Util.h:15, 3:34.38 from ../../dist/include/GLLibraryEGL.h:9, 3:34.38 from ../../dist/include/SharedSurfaceEGL.h:11, 3:34.38 from /home/botond/dev/mozilla/central/gfx/layers/opengl/TextureHostOGL.cpp:12, 3:34.38 from /home/botond/dev/mozilla/out-of-tree-objdirs/desktop/gfx/layers/Unified_cpp_gfx_layers4.cpp:171: 3:34.38 /usr/include/X11/Xlib.h:477:9: error: reference to ‘Time’ is ambiguous 3:34.38 In file included from ../../dist/system_wrappers/X11/X.h:3:0, 3:34.38 from /usr/include/X11/Xlib.h:44, 3:34.38 from ../../dist/system_wrappers/X11/Xlib.h:3, 3:34.38 from /usr/include/gtk-2.0/gdk/gdkx.h:32, 3:34.38 from /home/botond/dev/mozilla/central/widget/gtk/compat/gdk/gdkx.h:10, 3:34.38 from ../../dist/system_wrappers/gdk/gdkx.h:3, 3:34.38 from ../../dist/include/mozilla/X11Util.h:15, 3:34.38 from ../../dist/include/GLLibraryEGL.h:9, 3:34.38 from ../../dist/include/SharedSurfaceEGL.h:11, 3:34.38 from /home/botond/dev/mozilla/central/gfx/layers/opengl/TextureHostOGL.cpp:12, 3:34.38 from /home/botond/dev/mozilla/out-of-tree-objdirs/desktop/gfx/layers/Unified_cpp_gfx_layers4.cpp:171: 3:34.38 /usr/include/X11/X.h:77:23: error: candidates are: typedef long unsigned int Time 3:34.38 In file included from /home/botond/dev/mozilla/central/ipc/chromium/src/chrome/common/ipc_message_utils.h:17:0, 3:34.38 from ../../dist/include/ipc/IPCMessageUtils.h:11, 3:34.38 from /home/botond/dev/mozilla/out-of-tree-objdirs/desktop/ipc/ipdl/_ipdlheaders/mozilla/layers/LayersMessages.h:12, 3:34.38 from ../../dist/include/mozilla/layers/ISurfaceAllocator.h:17, 3:34.38 from ../../dist/include/mozilla/layers/CompositableForwarder.h:14, 3:34.38 from /home/botond/dev/mozilla/central/gfx/layers/ipc/ImageBridgeChild.h:14, 3:34.38 from /home/botond/dev/mozilla/central/gfx/layers/ipc/ImageBridgeChild.cpp:6, 3:34.38 from /home/botond/dev/mozilla/out-of-tree-objdirs/desktop/gfx/layers/Unified_cpp_gfx_layers4.cpp:2: 3:34.38 /home/botond/dev/mozilla/central/ipc/chromium/src/base/time.h:167:7: error: class base::Time
Going to restrict the scope to just ImageBridgeChild.cpp, as removing it for all of them is a bigger task.
Summary: "using namespace base" in some gfx/layers cpp files does not play nicely with unified builds → "using namespace base" in ImageBridgeChild.cpp does not play nicely with unified builds
Attached patch bug1004620.patchSplinter Review
Attachment #8416028 - Flags: review?(bjacob)
Attachment #8416028 - Flags: review?(bjacob) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: