Bug 1004620 - Purge ImageBridgeChild.cpp of 'using namespace base'. r=bjacob